bättre färg på länkar

--- a/css/style.css
+++ b/css/style.css
@@ -377,7 +377,7 @@ footer p {
 }
 
 .trads-article figure a{
-  color: #c9c5c5;
+  color: #58a6ff;
 }
 
 .trads-reference {
@@ -387,7 +387,6 @@ footer p {
 
 .trads-tin-hau figure {
   width: 5%;
-  min-width: 150px !important;
 }
 
 .trads-tin-hau figure img {
