--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,7 @@ body {
 #homeBtn {
     padding: 0;
     padding-bottom: 0;
-    background: url(/img/Flag_of_Hong_Kong2.svg) no-repeat center;
+    background: url(../img/Flag_of_Hong_Kong2.svg) no-repeat center;
     background-size: contain;
     width: 5em;
     height: inherit;
