--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ body {
   width: 80%;
 }
 
-.MainThumbnail div h1 {
+.MainThumbnail div h2 {
   /* font-size: 2em; */
   line-height: 1.5em;
   text-align: center;
@@ -150,7 +150,7 @@ footer {
   font-size: 2rem;
 }
 
-footer h1 {
+footer h2 {
   font-size: 2em;
   font-weight: bold;
 }
@@ -179,7 +179,7 @@ footer p {
   gap: 2em;
 }
 
-.sights-container h1 {
+.sights-container h2 {
   color: white;
   text-align: center;
   flex: 0 0 100%;
@@ -368,7 +368,7 @@ footer p {
 
   margin: 1em 2em;
 
-  min-width: 200px;
+  min-width: 250px;
   background-color: #333; /* #f8f9fa; */
   padding: 1em;
   text-align: center;
@@ -387,6 +387,7 @@ footer p {
 
 .trads-tin-hau figure {
   width: 5%;
+  min-width: 200px !important;
 }
 
 .trads-tin-hau figure img {
