--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,9 @@ body {
   background-color: #333;
   position: relative;
   background-image: url(https://live.staticflickr.com/65535/51113116493_34fc3759ae_b.jpg);
-  background-position: 0% 80%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
   justify-content: center;
   align-items: center;
   z-index: 5;
