--- a/culture/css/style.css
+++ b/culture/css/style.css
@@ -1,26 +1,34 @@
 
 
-
-
-.history-body {
-    width: 100vw;
-    height: 320vh;
-    font-family: Arial, Helvetica, sans-serif;
-    background: palevioletred;
+a:visited {
+    color: white;
 }
 
-.history-container-main {
+a {
+    color: rgb(255, 255, 255);
+    text-decoration: underline;
+}
+
+
+.culture-body {
+    width: 100vw;
+    height: 1000vh;
+    font-family: Arial, Helvetica, sans-serif;
+    background: #222;
+}
+
+.culture-container-main {
     width: 100%;
-    height: 85%;
+    height: 95%;
     display: flex;
     margin: 0 auto;
     justify-content: center;
 }
 
-.history-main {
+.culture-main {
     width: 100%;
     height: 100%;
-    background-color: white;
+    background-color: #222;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -29,21 +37,28 @@
 .history-article-0 {
     background: none;
     color: black;
+    display: flex;
+    justify-content: center;
+    background-color: #333;
+    width: 100%;
+    margin-top: 10em;
 }
 
 .history-main-title {
     font-size: 4.5em;
     align-self: flex-start;
-    margin-top: 1em;
+    margin-top: 0.2em;
+    margin-bottom: 0.2em;
+    color: white;
 }
 
 .history-article-1 {
     background: none;
-    color: black;
+    color: white;
     width: 80%;
-    height: 20%;
+    height: 7%;
     display: flex;
-    background-color: aliceblue;
+    background-color: #333;
     border: rgb(172, 172, 172) solid 0.2em;
     justify-content: center;
     align-items: center;
@@ -59,6 +74,7 @@
     justify-content: center;
     align-items: center;
     margin: 4rem;
+    line-height: 1.3;
 }
 
 .history-image-info-1 {
@@ -78,22 +94,22 @@
     font-size: 1.1em;
     padding-top: 1rem;
     width: 75%;
-    background-color: beige;
+    background-color: #333;
 }
 
 .history-article-2 {
     background: none;
-    color: black;
+    color: white;
     width: 80%;
     display: flex;
     flex-direction: column;
-    background-color: aliceblue;
+    background-color: #333;
     border: rgb(172, 172, 172) solid 0.2em;
     justify-content: center;
     align-items: center;
     padding: 2rem;
     margin-top: 10rem;
-    height: 30%;
+    height: 10%;
 }
 
 .history-article-2-text {
@@ -101,6 +117,7 @@
     font-size: 1.5em;
     width: 70%;
     height: 10%;
+    line-height: 1.3;
 }
 
 .history-image-info-2 {
@@ -124,15 +141,15 @@
 
 .history-article-3 {
     background: none;
-    color: black;
+    color: white;
     width: 80%;
     display: flex;
-    background-color: aliceblue;
+    background-color: #333;
     border: rgb(172, 172, 172) solid 0.2em;
     justify-content: center;
     align-items: center;
     padding: 2rem;
-    height: 20%;
+    height: 6%;
     margin-top: 10rem;
 }
 
@@ -140,6 +157,7 @@
     font-size: 1.5em;
     width: 60%;
     margin: 2em;
+    line-height: 1.3;
 }
 
 .history-image-info-3 {
@@ -160,21 +178,314 @@
     margin-left: 2em;
 }
 
-.history-footer {
+.culture-footer {
     background-color: black;
-    height: 18%;
+    height: 5%;
+}
+
+
+
+/* ---------------------- FOOD ---------------------- */
+
+/* ---------------------- FOOD ---------------------- */
+
+/* ---------------------- FOOD ---------------------- */
+
+
+
+.food-main-title {
+    font-size: 4.5em;
+    align-self: flex-start;
+    margin-top: 0.2em;
+    margin-bottom: 0.2em;
+    color: white;
+}
+
+.food-article-0 {
+    background: none;
+    background-color: #333;
+    color: black;
+    width: 100%; 
+    display: flex;
+    justify-content: center;
+    margin-top: 10em;
+}
+
+.food-article-1 {
+    background: none;
+    color: white;
+    margin-top: 4em;
+    background-color: #333;
+    border: solid 2px rgb(172, 172, 172);
+    height: 10%;
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+.food-article-1-text {
+    font-size: 1.5em;
+    width: 90%;
+    height: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    margin-top: 2em;
+    line-height: 1.3;
+}
+
+.food-image-info-1 {
+    width: 100%;
+    height: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.food-dumplings {
+    width: 75%;
+    margin-top: 2em;
+}
+
+.food-1-referance {
+    font-size: 1.1em;
+    padding-top: 1rem;
+    width: 75%;
+    background-color: #333;
+    display: flex;
+    justify-content: center;
+}
+
+.food-article-2 {
+    background: none;
+    color: white;
+    border: solid 2px rgb(172, 172, 172);
+    height: 10%;
+    width: 40%;
+    margin-top: 4em;
+    background-color: #333;
+}
+
+.food-article-2-text {
+    font-size: 1.5em;
+    width: 85%;
+    height: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    line-height: 1.3;
+}
+
+
+.food-image-info-2 {
+    width: 100%;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.food-fishballs {
+    width: 45%;
+}
+
+.food-2-referance {
+    font-size: 1.1em;
+    padding-top: 2rem;
+    width: 75%;
+    background-color: #333;
+    display: flex;
+    justify-content: center;
+
+}
+
+.food-article-3 {
+    background: none;
+    color: white;
+    margin-top: 4em;
+    border: solid 2px rgb(172, 172, 172);
+    height: 8%;
+    width: 40%;
+    background-color: #333;
+
+}
+
+.food-article-3-text {
+    font-size: 1.5em;
+    width: 85%;
+    height: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    margin-top: 1em;
+    line-height: 1.3;
+}
+
+.food-image-info-3 {
+    width: 100%;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 4em;
+}
+
+.food-eggwaffle {
+    width: 40%;
+}
+
+.food-3-referance {
+    font-size: 1.1em;
+    padding-top: 2rem;
+    width: 75%;
+    background-color: #333;
+    display: flex;
+    justify-content: center;
 }
 
 
 
 
 
+/* ---------------------- RELIGION ---------------------- */
+
+/* ---------------------- RELIGION ---------------------- */
+
+/* ---------------------- RELIGION ---------------------- */
 
 
-@media (max-width: 400px) {
+.religion-article-0 {
+    background: none;
+    background-color: #333;
+    color: black;
+    width: 100%; 
+    display: flex;
+    justify-content: center;
+    margin-top: 10em;
+}
 
-    .history-body {
-        height: 450vh;
+.religion-main-title {
+    font-size: 4.5em;
+    margin-top: 0.2em;
+    margin-bottom: 0.2em;
+    color: white;
+}
+
+.religion-article-1 {
+    background: none;
+    color: white;
+    margin-top: 4em;
+    background-color: #333;
+    border: solid 2px rgb(172, 172, 172);
+    height: 10%;
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.religion-article-1-text {
+    font-size: 1.5em;
+    width: 85%;
+    height: 35%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    line-height: 1.3;
+}
+
+.religion-image-info-1 {
+    width: 100%;
+    height: 65%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.religion-image-1 {
+    width: 50%;
+}
+
+.religion-1-referance {
+    font-size: 1.1em;
+    padding-top: 2rem;
+    width: 75%;
+    background-color: #333;
+    display: flex;
+    justify-content: center;
+}
+
+
+.religion-article-2 {
+    background: none;
+    color: white;
+    margin-top: 4em;
+    background-color: #333;
+    border: solid 2px rgb(172, 172, 172);
+    height: 14%;
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.religion-article-2-text {
+    font-size: 1.5em;
+    width: 85%;
+    height: 35%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    margin-top: -3em;
+    line-height: 1.3;
+}
+
+.religion-image-info-2 {
+    width: 100%;
+    height: 65%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.religion-image-2 {
+    width: 50%;
+    margin-top: -2em;
+}
+
+.religion-2-referance {
+    font-size: 1.1em;
+    padding-top: 2rem;
+    width: 40%;
+    background-color: #333;
+    display: flex;
+    justify-content: center;
+}
+
+
+
+
+
+/* ---------------------- RESPONSIVE (FOR MOBILE) ---------------------- */
+
+/* ---------------------- RESPONSIVE (FOR MOBILE) ---------------------- */
+
+/* ---------------------- RESPONSIVE (FOR MOBILE) ---------------------- */
+
+
+
+@media (max-width: 426px) {
+
+    .culture-body {
+        height: 1000vh;
+        width: 100vw;
     }
     
     .history-container-main {
@@ -184,10 +495,10 @@
         justify-content: center;
     }
     
-    .history-main {
+    .culture-main {
         width: 100%;
         height: 100%;
-        background-color: white;
+        background-color: #222;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -200,8 +511,9 @@
     
     .history-article-1 {
         width: 100%;
-        height: 29%;
+        height: 15%;
         flex-direction: column;
+        padding: 0;
     }
     
     .history-article-1-text {
@@ -224,22 +536,25 @@
     }
     
     .history-flag-referance {
+        margin-top: 6rem;
         font-size: 2em;
-        padding-top: 2rem;
-        width: 100%;
+        width: 80%;
+        margin-right: 4rem;
+        margin-top: 3em;
     }
     
     .history-article-2 {
         width: 100%;
         display: flex;
         flex-direction: column;
-        background-color: aliceblue;
+        background-color: #333;
         border: rgb(172, 172, 172) solid 0.2em;
         justify-content: center;
         align-items: center;
         padding: 2rem;
         margin-top: 20rem;
-        height: 22%;
+        height: 10%;
+        padding: 0;
     }
     
     .history-article-2-text {
@@ -265,22 +580,31 @@
     }
     
     .history-map-referance {
-        margin-top: 3rem;
+        margin-top: 6rem;
         font-size: 2em;
+        width: 80%;
+        margin-bottom: 2em;
+        margin-left: 1em;
     }
     
     .history-article-3 {
         width: 100%;
-        height: 30%;
+        height: 12.2%;
         flex-direction: column;
         margin-top: 20rem;
+        padding: 0;
+
     }
     
     .history-article-3-text {
         font-size: 2.8em;
         width: 85%;
-        margin: 2em;
+        margin: 0;
         margin-top: 1.5em;
+        margin-bottom: 1.5em;
+        padding: 0;
+
+
     }
     
     .history-image-info-3 {
@@ -296,81 +620,262 @@
     }
     
     .history-hong-britain-referance {
-        width: 100%;
-        font-size: 2.8em;
-        margin-left: 2em;
+        margin-top: 6rem;
+        font-size: 2em;
+        width: 85%;
+        margin-right: 4rem;
     }
     
-    .history-footer {
+    .culture-footer {
         background-color: black;
-        height: 18%;
+        height: 8%;
         width: 100%;
     }
+
+
     
+    /* ---------------------- FOOD ---------------------- */
+
+    /* ---------------------- FOOD ---------------------- */
+
+    /* ---------------------- FOOD ---------------------- */
+
+
+
+    .food-main-title {
+        font-size: 4.5em;
+        align-self: flex-start;
+        margin-top: 0.2em;
+        margin-bottom: 0.2em;
+        color: white;
+    }
+
+    .food-article-0 {
+        background: none;
+        background-color: #333;
+        color: black;
+        width: 100%; 
+        display: flex;
+        justify-content: center;
+        margin-top: 10em;
+    }
+
+    .food-article-1 {
+        background: none;
+        color: white;
+        margin-top: 4em;
+        background-color: #333;
+        border: solid 2px rgb(172, 172, 172);
+        height: 8%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+    }
+
+    .food-article-1-text {
+        font-size: 2.8em;
+        width: 85%;
+        height: 50%;
+        margin-top: 0;
+    }
+
+    .food-image-info-1 {
+        width: 100%;
+        height: 70%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .food-dumplings {
+        width: 100%;
+        margin-top: 2em;
+    }
+
+    .food-1-referance {
+        margin-top: 6rem;
+        font-size: 2em;
+        width: 100%;
+    }
+
+    .food-article-2 {
+        background: none;
+        color: white;
+        border: solid 2px rgb(172, 172, 172);
+        height: 8%;
+        width: 100%;
+        margin-top: 20rem;
+        background-color: #333;
+    }
+
+    .food-article-2-text {
+        font-size: 2.8em;
+        width: 85%;
+        height: 20%;
+        margin-top: 0;
+    }
+
+
+    .food-image-info-2 {
+        width: 100%;
+        height: 80%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .food-fishballs {
+        width: 70%;
+    }
+
+    .food-2-referance {
+        margin-top: 4rem;
+        font-size: 2em;
+        width: 100%;
+    }
+
+    .food-article-3 {
+        background: none;
+        color: white;
+        margin-top: 20rem;
+        border: solid 2px rgb(172, 172, 172);
+        height: 9%;
+        width: 100%;
+        background-color: #333;
+
+    }
+
+    .food-article-3-text {
+        font-size: 2.8em;
+        width: 85%;
+        height: 35%;
+        margin-top: 0;
+    }
+
+    .food-image-info-3 {
+        width: 100%;
+        height: 80%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 4em;
+    }
+
+    .food-eggwaffle {
+        width: 100%;
+    }
+
+    .food-3-referance {
+        margin-top: 6rem;
+        font-size: 2em;
+        width: 100%;
+    }
+
+
+    /* ---------------------- RELIGION ---------------------- */
+
+    /* ---------------------- RELIGION ---------------------- */
+
+    /* ---------------------- RELIGION ---------------------- */
+
+
+    .religion-article-0 {
+        background: none;
+        background-color: #333;
+        color: black;
+        width: 100%; 
+        display: flex;
+        justify-content: center;
+        margin-top: 10em;
+    }
+
+    .religion-main-title {
+        font-size: 4.5em;
+        margin-top: 0.2em;
+        margin-bottom: 0.2em;
+        color: white;
+    }
+
+    .religion-article-1 {
+        background: none;
+        color: white;
+        margin-top: 4em;
+        background-color: #333;
+        border: solid 2px rgb(172, 172, 172);
+        height: 10%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .religion-article-1-text {
+        font-size: 2.8em;
+        width: 85%;
+        height: 100%;
+    }
+
+    .religion-image-info-1 {
+        width: 100%;
+        height: 65%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .religion-image-1 {
+        width: 50%;
+    }
+
+    .religion-1-referance {
+        margin-top: 6rem;
+        font-size: 2em;
+        width: 100%;
+    }
+
+
+    .religion-article-2 {
+        background: none;
+        color: white;
+        margin-top: 20rem;
+        background-color: #333;
+        border: solid 2px rgb(172, 172, 172);
+        height: 14%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .religion-article-2-text {
+        font-size: 2.8em;
+        width: 85%;
+        height: 35%;
+        margin-top: 1em;
+    }
+
+    .religion-image-info-2 {
+        width: 100%;
+        height: 65%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .religion-image-2 {
+        width: 80%;
+        margin-top: 4em;
+    }
+
+    .religion-2-referance {
+        font-size: 2em;
+        width: 70%;
+        margin-top: 2rem;
+    }
 
 }
-
-
-
-/* ---------------------- FOOD ---------------------- */
-
-/* ---------------------- FOOD ---------------------- */
-
-/* ---------------------- FOOD ---------------------- */
-
-
-
-.food-body {
-    width: 100vw;
-    height: 320vh;
-    font-family: Arial, Helvetica, sans-serif;
-    background: palevioletred;
-}
-
-.food-container-main {
-    width: 100%;
-    height: 80%;
-    display: flex;
-    margin: 0 auto;
-    justify-content: center ;
-}
-
-.food-main {
-    width: 100%;
-    height: 100%;
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.food-article-0 {
-    background: none;
-    color: black;
-}
-
-.food-article-1 {
-    background: none;
-    color: black;
-}
-
-.food-article-2 {
-    background: none;
-    color: black;
-}
-
-.food-article-3 {
-    background: none;
-    color: black;
-}
-
-
-
-
-
-
-
-
 
 
 
