--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 html {
     font-size: calc(calc(4vh + 4vw + 2vmin) / 15);
+    /* font-size: 4px; */
 
     /* Vad tycker ni om att använda vmin för huvud font-size istället för 16px. vmin gör att font-size är 2.5% av den minsta längden av viewporten. */
 
@@ -7,11 +8,20 @@ html {
     box-sizing: border-box;
     
 }
-
+i {
+    font-style: italic;
+}
+strong {
+    font-weight: bold;
+}
 body {
     min-width: 200px;
-    background-color: #333;
-    --redColor: #EE1C25;
+    background-color: var(--GrayBackground);
+    /* --redColor: #EE1C25; */
+    --redColor: #df1923;
+    --SelectedRedColor: #c41921;
+    --GrayBackground: #333;
+    --DarkGrayBackground: #222;
 }
 
 .Active {
@@ -22,17 +32,14 @@ body {
 
 
 * h1 {
-    /* font-size: 15vmin; */
     font-size: 3em;
 }
 
 * h2 {
-    /* font-size: 10vmin; */
     font-size: 2em;
 }
 
 * p {
-    /* font-size: 5vmin; */
     margin-bottom: 1em;
     font-size: 1em;
 }
@@ -50,9 +57,8 @@ body {
     position: relative;
     width: 100%;
     height: 40vh;
-    background-color: #333;
-    position: relative;
-    background-image: url(https://live.staticflickr.com/65535/51113116493_34fc3759ae_b.jpg);
+    background-color: var(--GrayBackground);
+    background-image: url(../img/main_Thumbnail.webp);
     justify-content: center;
     align-items: center;
     background-position: center 80%;
@@ -74,46 +80,10 @@ body {
     text-align: center;
 }
 
-.MainThumbnail {
-    display: flex;
-    position: relative;
-    width: 100%;
-    height: 40vh;
-    background-color: #333;
-    position: relative;
-    background-image: url(https://live.staticflickr.com/65535/51113116493_34fc3759ae_b.jpg);
-    background-position: 0% 80%;
-    justify-content: center;
-    align-items: center;
-    z-index: 5;
-}
-
-.MainThumbnail div {
-
-    backdrop-filter: blur(2px);
-    background-color: rgba(0, 0, 0, 0.2);
-    padding: 2em;
-}
-
-.MainThumbnail div h1 {
-    /* font-size: 2em; */
-    line-height: 1.5em;
-    text-align: center;
-
-    /* background-color: rgba(0,0,0,0.5); */
-}
 
 /*  Ctrl + Shift + ´ (<- knappen åt vänster om backspace) för att folda texten
     Ctrl + Shift + Å för att unfolda texten */
 /* #region ---------------- Header -------------- */
-
-.logo {
-    width: 100%;
-    position: relative;
-
-    height: var(--headerPadding);
-    overflow: hidden;
-}
 
 /* Add a black background color to the top navigation */
 .topnav {
@@ -126,8 +96,10 @@ body {
 .topnav a {
     float: left;
     display: block;
-    color: #f2f2f2;
+    color: white;
+    font-weight: bold;
     text-align: center;
+    text-shadow: #000 -1px -1px 0px;
     padding: 1em;
     text-decoration: none;
     background-color: var(--redColor);
@@ -143,14 +115,13 @@ body {
 
 /* Change the color of links on hover */
 .topnav a:hover {
-    background-color: #c41921;
+    background-color: var(--SelectedRedColor);
     transition: all 0.3s ease-in-out;
 }
 
 /* Add an active class to highlight the current page */
 .topnav a.active {
-    background-color: #c41921;
-    color: white;
+    background-color: var(--SelectedRedColor);
 }
 
 /* Hide the link that should open and close the topnav on small screens */
@@ -165,6 +136,7 @@ body {
     background-size: contain;
     width: 5em;
     height: inherit;
+    
 
 }
 
@@ -217,19 +189,20 @@ footer p {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
-    align-items: center;
+    align-items: flex-end;
     padding: 1em;
-    background-color: #222;
+    background-color: var(--DarkGrayBackground);
     height: max-content;
     padding-bottom: 10em;
     gap: 2em;
-
+    
 }
 
 .sights-container h1 {
     color: white;
     text-align: center;
     flex: 0 0 100%;
+    margin-bottom: 1.5em;
 }
 
 .sightlink {
@@ -251,41 +224,50 @@ footer p {
     background-size: cover;
     background-position: center;
     min-height: calc(calc(20vh + 20vw + 50vmin) / 3);
+    margin-top: 5em;
+    background-origin: border-box;
 }
 
 .sightlink:hover {
     transform: scale(1.08);
     transition: transform 0.2s ease-in-out;
+    transform-origin: center;
 
 }
 
 
 .sightlink h2 {
     color: white;
+    font-size: 1.7em;
     text-align: center;
     padding: 1.5em;
-    display: block;
-    background-color: #333;
-
+    background-color: var(--GrayBackground);
+    top: -4em;
+    left: 0;
+    box-sizing: border-box;
+    position: absolute;
+    width: 100%;
+    display: inline;
+    
 }
 
 #sight-card-1 a {
-    background-image: url(https://www.planetware.com/wpimages/2018/10/hong-kong-attractions-victoria-peak-view-over-harbor.jpg);
+    background-image: url(../img/Hong_Kong_Skyline.webp);
     background-size: cover;
+    background-position: center bottom;
 }
 
 #sight-card-2 a {
-    background-image: url(https://www.planetware.com/wpimages/2018/10/hong-kong-attractions-hong-kong-park-pond.jpg);
+    background-image: url(../img/1024px-Hong_Kong_Park_3.webp);
     background-size: cover;
-    background-position: right center;
+    background-position: 50% 0%;
 }
 
 #sight-card-3 a {
-    background-image: url(https://www.planetware.com/wpimages/2018/10/hong-kong-attractions-big-buddha-and-forest.jpg);
+    background-image: url(../img/The_Big_Buddha_Hong_Kong_2013.webp);
     background-size: cover;
-    background-position: 70%;
+    background-position: 0% 40%;
 
-    background-origin: content-box;
 }
 
 /* #endregion */
@@ -294,7 +276,7 @@ footer p {
 
 /* #region /Sights/ */
 .SightSection {
-    background-color: #222;
+    background-color: var(--DarkGrayBackground);
 }
 
 .SightSection>article>figure {
@@ -305,10 +287,12 @@ footer p {
     padding: 1em;
     min-width: 50vw;
     color: white;
-    font-size: 2.5rem;
+    font-size: 2.8rem;
     display: flex;
     gap: 2em;
     flex-direction: row;
+    position: relative;
+    align-items: stretch;
 
 }
 .SightSection:nth-of-type(even) article {
@@ -325,33 +309,46 @@ footer p {
 .SightSection article div h2 {
     color: white;
     flex: 0 0 100%;
-    font-size: 1.1em;
+    font-size: 1.2em;
     line-height: normal;
     margin-bottom: 1em;
 }
 
 .SightSection article div p {
-    margin-bottom: 1em;
+    margin-bottom: 1.1em;
     line-height: normal;
 }
 
 
 .SightSection article figure img {
     width: 100%;
-
+    height: 100%;
+    min-width: 200px;
+    object-fit: cover;
 }
 .SightSection article figure, .SightSection article div {
     width: 50%;
-    height: fit-content;
+    /* height: 100%; */
+    min-height: 100%;
+    /* height: fit-content; */
 }
-.SightSection figcaption>span, .SightSection figcaption>span>a {
+.SightSection article figure {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.SightSection .imgCopyrightRef span, .SightSection .imgCopyrightRef a {
 
 
     color: #666;    
 }
-.SightSection article figure figcaption  {
-    /* text-align: center; */
+.SightSection figcaption { 
+    padding: 0.5em;
     font-size: 0.8em;
+    font-family: 'Times New Roman', Times, serif;
+}
+.SightSection .imgCopyrightRef span {
+    /* text-align: center; */
     padding: 1em 1em;
 }
 
@@ -368,6 +365,16 @@ footer p {
 /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
 @media screen and (max-width: 500px) {
     
+    .MainThumbnail p{
+        font-size: 1.5em;
+        /* font-size: calc(calc(4vh + 4vw + 2vmin) / 20); */
+    }
+    .MainThumbnail h1 {
+        font-size: 4em;
+    }
+    .MainThumbnail {
+        height: 40vh;
+    }
     #cssIdentifier::after {
 
         content: "mobile css.";
@@ -380,7 +387,7 @@ footer p {
     .topnav a.icon {
         float: right;
         display: block;
-        background-color: #333;
+        background-color: var(--GrayBackground);
         z-index: 2;
         height: 100%;
     }
@@ -404,7 +411,7 @@ footer p {
         display: block;
         text-align: left;
         color: white;
-        background-color: #333;
+        background-color: var(--GrayBackground);
     }
     .topnav.responsive a.active {
         background-color: #555;
@@ -431,20 +438,13 @@ footer p {
 
     }
 
-    .sights-container {
-        gap: 5em;
-    }
-    .MainThumbnail {
-        height: 20vh;
-    }
+    
 
 
     .sights-container {
         gap: 5em;
     }
-    .MainThumbnail {
-        height: 20vh;
-    }
+    
 }
 
 
@@ -453,7 +453,7 @@ footer p {
         width: 100%;
     }
     .SightSection article {
-        font-size: 3em;
+        font-size: 3.4em;
 
         flex-direction: column;
     }
