--- a/css/style.css
+++ b/css/style.css
@@ -13,14 +13,11 @@ body {
     --redColor: #ee1c25;
 }
 
-.Active {
-    background-color: #4caf50;
-    color: white;
-}
+
 
 * h1 {
     /* font-size: 15vmin; */
-    font-size: 3em;
+    font-size: 4em;
 }
 
 * h2 {
@@ -33,32 +30,38 @@ body {
     font-size: 1em;
 }
 
+
 .MainThumbnail {
     display: flex;
     position: relative;
     width: 100%;
-    height: 60vh;
+    min-height: 60vh;
     background-color: #333;
-    position: relative;
-    background-image: url(https://live.staticflickr.com/65535/51113116493_34fc3759ae_b.jpg);
-    background-repeat: no-repeat;
+    background: url(https://live.staticflickr.com/65535/51113116493_34fc3759ae_b.jpg) no-repeat center;
+    /* background-image: url(https://live.staticflickr.com/65535/51113116493_34fc3759ae_b.jpg); */
+    /* 
+     background-repeat: no-repeat;
+     background-position: center; 
+    
+    */
     background-size: cover;
-    background-position: center;
     justify-content: center;
     align-items: center;
-    z-index: 5;
+    /* z-index: 5; */
 }
 
 .MainThumbnail div {
     backdrop-filter: blur(2px);
     background-color: rgba(0, 0, 0, 0.2);
-    padding: 2em;
+    padding: 1em;
+    margin: 1em;
     width: 80%;
+    font-size: 1.5em;
 }
 
 .MainThumbnail div h2 {
     /* font-size: 2em; */
-    line-height: 1.5em;
+    line-height: 1.1em;
     text-align: center;
 
     /* background-color: rgba(0,0,0,0.5); */
@@ -66,8 +69,8 @@ body {
 
 .MainThumbnail div p {
     text-align: center;
-    line-height: 1.5em;
-    margin-top: 1.5em;
+    line-height: 1.2em;
+    margin-top: 1em;
 }
 
 #MainThumbnail-content {
@@ -95,6 +98,7 @@ body {
     /* 2rem */
     height: 6em;
     /* 12rem */
+    z-index: 1;
     background-color: var(--redColor);
     overflow: hidden;
 }
@@ -169,7 +173,7 @@ footer {
     background-color: #333333;
     color: white;
     height: max-content;
-    font-size: 2rem;
+    font-size: 2.5em;
 }
 
 footer h2 {
@@ -177,7 +181,7 @@ footer h2 {
     font-weight: bold;
 }
 
-footer h2 {
+footer p {
     font-size: 1em;
 }
 
@@ -271,7 +275,7 @@ footer ul {
 
 /* #region -------------Sights Section-----------*/
 
-.sights-container {
+.card-container {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -279,14 +283,18 @@ footer ul {
     align-items: center;
     padding: 1em;
     background-color: #222;
-    height: max-content;
+    min-height: 30vh;
     padding-bottom: 10em;
     gap: 2em;
+    font-size: 1.5em;
+    margin-bottom: 2em;
 }
 
-.sights-container h2 {
+.card-container h1 {
     color: white;
+    font-size: 5em;
     text-align: center;
+    margin-top: 1em;
     flex: 0 0 100%;
 }
 
@@ -308,17 +316,22 @@ footer ul {
     background-size: cover;
     background-position: center;
     min-height: calc(calc(20vh + 20vw + 50vmin) / 3);
+    margin-top: 12em;
 }
+
 
 .sightlink:hover {
     transform: scale(1.08);
     transition: transform 0.2s ease-in-out;
 }
 
-.sightlink h2 {
+.sightlink a h2 {
+    position: absolute;
+    top: -4em;
+    width: 100%;
     color: white;
     text-align: center;
-    padding: 1.5em;
+    padding: 1.5em 0;
     display: block;
     background-color: #333;
 }
@@ -629,13 +642,27 @@ footer ul {
     .SightSection:nth-of-type(even) article {
         flex-direction: column;
     }
-    .sights-container {
+    .card-container {
         gap: 5em;
     }
+    .trads-article {
+        font-size: 2.5em;
 
-    .MainThumbnail {
-        height: 40vh;
     }
+    
+    footer li {
+        display: block;
+        flex: 1 1 40%;
+        padding: 0.8em;
+        font-size: 1.4em;
+    }
+    footer ul li:first-child {
+        flex: 1 1 100%;
+    }
+    footer ul {
+        flex-wrap: wrap;
+    }
+    
 }
 
 
