--- a/culture/css/style.css
+++ b/culture/css/style.css
@@ -64,6 +64,7 @@ a {
     align-items: center;
     padding: 2rem;
     margin-top: 4em;
+    font-size: 2em;
 }
 
 .history-article-1-text {
@@ -110,6 +111,7 @@ a {
     padding: 2rem;
     margin-top: 10rem;
     height: 10%;
+    font-size: 2em;
 }
 
 .history-article-2-text {
@@ -151,6 +153,7 @@ a {
     padding: 2rem;
     height: 6%;
     margin-top: 10rem;
+    font-size: 2em;
 }
 
 .history-article-3-text {
@@ -183,15 +186,11 @@ a {
     height: 5%;
 } */
 
-
-
 /* ---------------------- FOOD ---------------------- */
 
 /* ---------------------- FOOD ---------------------- */
 
 /* ---------------------- FOOD ---------------------- */
-
-
 
 .food-main-title {
     font-size: 4.5em;
@@ -221,8 +220,8 @@ a {
     width: 40%;
     display: flex;
     flex-direction: column;
+    font-size: 2em;
     align-items: center;
-
 }
 
 .food-article-1-text {
@@ -267,6 +266,7 @@ a {
     width: 40%;
     margin-top: 4em;
     background-color: #333;
+    font-size: 2em;
 }
 
 .food-article-2-text {
@@ -279,7 +279,6 @@ a {
     margin: 0 auto;
     line-height: 1.3;
 }
-
 
 .food-image-info-2 {
     width: 100%;
@@ -300,7 +299,6 @@ a {
     background-color: #333;
     display: flex;
     justify-content: center;
-
 }
 
 .food-article-3 {
@@ -311,7 +309,7 @@ a {
     height: 8%;
     width: 40%;
     background-color: #333;
-
+    font-size: 2em;
 }
 
 .food-article-3-text {
@@ -348,16 +346,11 @@ a {
     justify-content: center;
 }
 
-
-
-
-
 /* ---------------------- RELIGION ---------------------- */
 
 /* ---------------------- RELIGION ---------------------- */
 
 /* ---------------------- RELIGION ---------------------- */
-
 
 .religion-article-0 {
     background: none;
@@ -386,6 +379,7 @@ a {
     width: 40%;
     display: flex;
     flex-direction: column;
+    font-size: 2em;
     align-items: center;
 }
 
@@ -421,7 +415,6 @@ a {
     justify-content: center;
 }
 
-
 .religion-article-2 {
     background: none;
     color: white;
@@ -431,6 +424,7 @@ a {
     height: 14%;
     width: 40%;
     display: flex;
+    font-size: 2em;
     flex-direction: column;
     align-items: center;
 }
@@ -469,22 +463,17 @@ a {
     justify-content: center;
 }
 
-footer a{
+footer a {
     color: #58a6ff !important;
 }
 
-
-
 /* ---------------------- RESPONSIVE (FOR MOBILE) ---------------------- */
 
 /* ---------------------- RESPONSIVE (FOR MOBILE) ---------------------- */
 
 /* ---------------------- RESPONSIVE (FOR MOBILE) ---------------------- */
-
-
 
 @media (max-width: 426px) {
-
     .culture-container-main {
         height: 1000vh;
         width: 100vw;
@@ -516,6 +505,7 @@ footer a{
         height: 15%;
         flex-direction: column;
         padding: 0;
+        font-size: 2em;
     }
     
     .history-article-1-text {
@@ -557,6 +547,7 @@ footer a{
         margin-top: 20rem;
         height: 10%;
         padding: 0;
+        font-size: 2em;
     }
     
     .history-article-2-text {
@@ -595,7 +586,7 @@ footer a{
         flex-direction: column;
         margin-top: 20rem;
         padding: 0;
-
+        font-size: 2em;
     }
     
     .history-article-3-text {
@@ -605,8 +596,6 @@ footer a{
         margin-top: 1.5em;
         margin-bottom: 1.5em;
         padding: 0;
-
-
     }
     
     .history-image-info-3 {
@@ -635,15 +624,11 @@ footer a{
         padding: 0;
     }
 
-
-    
     /* ---------------------- FOOD ---------------------- */
 
     /* ---------------------- FOOD ---------------------- */
 
     /* ---------------------- FOOD ---------------------- */
-
-
 
     .food-main-title {
         font-size: 4.5em;
@@ -674,7 +659,6 @@ footer a{
         display: flex;
         flex-direction: column;
         align-items: center;
-
     }
 
     .food-article-1-text {
@@ -720,7 +704,6 @@ footer a{
         margin-top: 0;
     }
 
-
     .food-image-info-2 {
         width: 100%;
         height: 80%;
@@ -747,7 +730,6 @@ footer a{
         height: 9%;
         width: 100%;
         background-color: #333;
-
     }
 
     .food-article-3-text {
@@ -776,13 +758,11 @@ footer a{
         width: 100%;
     }
 
-
     /* ---------------------- RELIGION ---------------------- */
 
     /* ---------------------- RELIGION ---------------------- */
 
     /* ---------------------- RELIGION ---------------------- */
-
 
     .religion-article-0 {
         background: none;
@@ -838,7 +818,6 @@ footer a{
         width: 100%;
     }
 
-
     .religion-article-2 {
         background: none;
         color: white;
@@ -877,8 +856,4 @@ footer a{
         width: 70%;
         margin-top: 2rem;
     }
-
 }
-
-
-
